# AeonX

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt  README.md
backend/include/myc/backend/: backend_module.hpp
backend/src/: backend_module.cpp
compiler/: CMakeLists.txt  README.md
compiler/ast/: CMakeLists.txt  README.md
compiler/ast/include/myc/ast/: ast_kind.hpp  ast_module.hpp  ast_node.hpp  ast_pretty_printer.hpp  ast_visitor.hpp  declaration_nodes.hpp  expression_nodes.hpp  future_nodes.hpp  identifier_node.hpp  literal_nodes.hpp  program_node.hpp  statement_nodes.hpp  type_nodes.hpp
compiler/ast/src/: ast_accept.cpp  ast_module.cpp  ast_node.cpp  ast_pretty_printer.cpp  ast_visitor.cpp
compiler/cli/: CMakeLists.txt  README.md
compiler/cli/include/myc/cli/: cli_options.hpp  cli_parser.hpp
compiler/cli/src/: cli_parser.cpp
compiler/codegen/: CMakeLists.txt  README.md
compiler/codegen/include/myc/codegen/: codegen_module.hpp
compiler/codegen/src/: codegen_module.cpp
compiler/commands/: CMakeLists.txt  README.md
compiler/commands/include/myc/commands/: abstract_command.hpp  builtin_commands.hpp  command_context.hpp  command_registry.hpp  help_command.hpp  placeholder_command.hpp  tokens_command.hpp  version_command.hpp
compiler/commands/src/: builtin_commands.cpp  command_registry.cpp  help_command.cpp  placeholder_command.cpp  tokens_command.cpp  version_command.cpp
compiler/common/: CMakeLists.txt  README.md
compiler/common/include/myc/common/: cli_output.hpp  result.hpp
compiler/common/src/: cli_output.cpp
compiler/config/: CMakeLists.txt  README.md
compiler/config/include/myc/config/: compiler_config.hpp
compiler/config/src/: compiler_config.cpp
compiler/diagnostics/: CMakeLists.txt  README.md
compiler/diagnostics/include/myc/diagnostics/: ansi_color.hpp  diagnostic.hpp  diagnostic_builder.hpp  diagnostic_emitter.hpp  diagnostic_engine.hpp  diagnostic_formatter.hpp  diagnostic_json.hpp  diagnostic_output.hpp  diagnostic_reporter.hpp  error_code.hpp  fix_it_hint.hpp  severity.hpp  source_location.hpp  source_span.hpp
compiler/diagnostics/src/: ansi_color.cpp  diagnostic.cpp  diagnostic_builder.cpp  diagnostic_emitter.cpp  diagnostic_engine.cpp  diagnostic_formatter.cpp  diagnostic_json.cpp  diagnostic_reporter.cpp  error_code.cpp
compiler/driver/: CMakeLists.txt  DISPATCHER.md  README.md
compiler/driver/include/myc/driver/: cli_parser.hpp  command_dispatcher.hpp  compiler_driver.hpp
compiler/driver/src/: cli_parser.cpp  command_dispatcher.cpp  compiler_driver.cpp  main.cpp
compiler/exitcodes/: CMakeLists.txt  README.md
compiler/exitcodes/include/myc/exitcodes/: exit_codes.hpp
compiler/hir/: CMakeLists.txt  README.md
compiler/hir/include/myc/hir/: hir_module.hpp
compiler/hir/src/: hir_module.cpp
compiler/ir/: CMakeLists.txt  README.md
compiler/ir/include/myc/ir/: ir_module.hpp
compiler/ir/src/: ir_module.cpp
compiler/lexer/: CMakeLists.txt  README.md
compiler/lexer/src/: character_reader.cpp  character_stream.cpp  keyword.cpp  lexer.cpp  lexer_configuration.cpp  lexer_context.cpp  lexer_module.cpp  lexer_statistics.cpp  operator.cpp  scanner_registry.cpp  token_category_map.cpp  token_factory.cpp  token_printer.cpp  token_stream.cpp  token_type.cpp
compiler/lexer/src/scanners/: annotation_scanner.cpp  character_scanner.cpp  comment_scanner.cpp  directive_scanner.cpp  identifier_scanner.cpp  keyword_scanner.cpp  number_scanner.cpp  operator_scanner.cpp  scanner_utils.cpp  string_scanner.cpp  unknown_scanner.cpp  whitespace_scanner.cpp
compiler/llvm/: CMakeLists.txt  README.md
compiler/llvm/src/: llvm_module.cpp
compiler/mir/: CMakeLists.txt  README.md
compiler/mir/src/: mir_module.cpp
compiler/parser/: CMakeLists.txt  README.md
compiler/parser/src/: attribute_parser.cpp  declaration_parser.cpp  expression_parser.cpp  future_generic_parser.cpp  future_macro_parser.cpp  future_pattern_parser.cpp  import_parser.cpp  literal_parser.cpp  parser.cpp  parser_context.cpp  parser_module.cpp  parser_statistics.cpp  recovery_manager.cpp  statement_parser.cpp  token_cursor.cpp  type_parser.cpp
compiler/semantic/: CMakeLists.txt  README.md
compiler/semantic/src/: semantic_module.cpp
compiler/source/: CMakeLists.txt  README.md
compiler/source/src/: encoding.cpp  file_loader.cpp  future_include_resolver.cpp  line_table.cpp  source_buffer.cpp  source_file.cpp  source_manager.cpp  source_span.cpp
compiler/typechecker/: CMakeLists.txt  README.md
compiler/typechecker/src/: typechecker_module.cpp
debugger/: CMakeLists.txt  README.md
debugger/include/myc/debugger/: debugger_module.hpp
debugger/src/: debugger_module.cpp
formatter/: CMakeLists.txt  README.md
formatter/include/myc/formatter/: formatter_module.hpp
formatter/src/: formatter_module.cpp
frontend/: CMakeLists.txt  README.md
frontend/include/myc/frontend/: frontend_module.hpp
frontend/src/: frontend_module.cpp
language-server/: CMakeLists.txt  README.md
language-server/include/myc/language_server/: language_server_module.hpp
language-server/src/: language_server_module.cpp
linter/: CMakeLists.txt  README.md
linter/include/myc/linter/: linter_module.hpp
linter/src/: linter_module.cpp
optimizer/: CMakeLists.txt  README.md
optimizer/include/myc/optimizer/: optimizer_module.hpp
optimizer/src/: optimizer_module.cpp
package-manager/: CMakeLists.txt  README.md
package-manager/include/myc/package_manager/: package_manager_module.hpp
package-manager/src/: package_manager_module.cpp
runtime/: CMakeLists.txt  README.md
runtime/include/myc/runtime/: runtime_module.hpp
runtime/src/: runtime_module.cpp
shared/src/: CMakeLists.txt
shared/src/logging/: logger.cpp
shared/src/version/: version_info.cpp
tests/unit/: CMakeLists.txt  myc_test.hpp  myc_test_main.cpp  test_character_stream.cpp  test_cli.cpp  test_config.cpp  test_diagnostics.cpp  test_lexer.cpp  test_lexer_debug.cpp  test_lexer_infrastructure.cpp  test_lexer_production.cpp  test_parser.cpp  test_source.cpp  test_version.cpp
(+110 files in other folders)
