add_subdirectory(config)
add_subdirectory(diagnostics)
add_subdirectory(source)
add_subdirectory(lexer)
add_subdirectory(parser)
add_subdirectory(ast)
add_subdirectory(semantic)
add_subdirectory(typechecker)
add_subdirectory(hir)
add_subdirectory(mir)
add_subdirectory(ir)
add_subdirectory(codegen)
add_subdirectory(llvm)
add_subdirectory(driver)
