add_library(myc_language_server STATIC src/language_server_module.cpp)
target_include_directories(myc_language_server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(myc_language_server PUBLIC myc_frontend myc_diagnostics)
myc_set_target_standard(myc_language_server)
myc_set_warnings(myc_language_server)
add_library(myc::language_server ALIAS myc_language_server)
