add_library(myc_llvm_backend STATIC src/llvm_module.cpp)
target_include_directories(myc_llvm_backend PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(myc_llvm_backend PUBLIC myc_codegen)
myc_set_target_standard(myc_llvm_backend)
myc_set_warnings(myc_llvm_backend)
add_library(myc::llvm ALIAS myc_llvm_backend)
